@@ -5,7 +5,8 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix encoding problem in meeting latex view.
+  [jone]
 
 
 1.3.2 (2012-04-23)
